# cline-wasm

./: .env,example  Cargo.toml  README.md  Trunk.toml  index.html
src/: main.rs  server.rs
